sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:21: error: not found: value Rouge
        while(getCouleur(h)==Rouge){
                             ^